--- a/03-questions.Rmd
+++ b/03-questions.Rmd
@@ -28,15 +28,26 @@ So, when tagging referents:
 
 > I saw [the older woman] `woman` with [a barking dog] `dog`.
 
-> [A big tall man] `man` who was bouncing a ball walked down the street.
+> [A big tall man] `man` 
+> who was bouncing [a ball] `ball` walked down the street.
 
-If the speaker makes errors or repitions 
-between the initial determiner and the final referent noun,
-tag everything between the two.
+If errors or repeitions occur after the determiner,
+but before the final referent noun,
+and the determiner is not repeated,
+we treat the repition as intervening material,
+and tag everything between the two.
 
 > While I was watching,
 > [a big - er well not really that big - man] `man` 
 > who was bouncing a ball started walking down the street.
+
+> On the other side of the street,
+> There was [a boy - uh not boy - man] `man` bouncing a ball.
+
+Note:
+If the determiner *was* repeated ("a boy - uh not a boy - a man"),
+we would tag only the last instance of the referent.
+See: [Repititions](#repititions)
 
 ### Groceries
 
